--- a/editor/css/light.css
+++ b/editor/css/light.css
@@ -93,6 +93,7 @@ input.Number {
 	background: #eee;
 	padding: 0px;
 	margin: 0px;
+	z-index: 10;
 }
 
 	#menubar .menu {
